optimize expensive EndListener() calls (tdf#102364)

The document has a large (1M cells) column, and when replacing old cells
with new cells during undo as described in the bugreport the repeated
calls to EndListener() from ScColumn::DetachFormulaCell() get quite costly.
Since ScDocument::CopyToDocument() calls StartAllListeners() at the end
for the given range, simply end all listeners before the operation in one
more efficient step for cells that will be replaced by the operation anyway.

Change-Id: If51dacdfbe876134de956dbc6bbd73e97d9686ff